--- a/www/editor.html
+++ b/www/editor.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html style="height: 100%">
+<html style="min-height: 100vh">
 <head>
   <meta charset="utf-8">
   <title>Paper Programs Editor</title>
 </head>
-<body style="background: black; color: white; margin: 0; padding: 0; height: 100%">
+<body style="background: black; color: white; margin: 0; padding: 0; min-height: 100vh">
   <script src="editor.js" type="text/javascript"></script>
 </body>
 </html>
